--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,69 @@
-.logo{
-    text-align: center;
-    display: block;
+body{
+    /* background-color: rgb(184, 83, 83); */
+    background-image: url(../assets/background.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px;
 }
 
-body{
-    background-color: rgb(184, 83, 83);
+.logotipo{
+    display: flex;
+    justify-content: center;
+    margin-left: 17px;
+    padding: 7px;
+    align-items: center;
+}
+
+header{
+    display: flex;
+    margin: 17px;
+    min-height: 70px;
+    justify-content: space-between;
+    height: 97px;
+    background-color: rgb(165, 42, 42);
+    align-items: center;
+}
+
+.encabezado{
+    padding: 10px;
+    text-align: right;
+    color:rgb(100, 0, 0);
+    font-size: 37px;
+    font-family: 'Delicious Handrawn', cursive;
+}
+
+.navlink{
+    justify-content: center;
+    padding: 10px;
+    margin: 7px;
+    text-align: center;
+    color:rgb(255, 0, 0);
+    font-size: 32px;
+    align-items: center;
+}
+
+a{
+    padding: 10px;
+    font-family: 'Nunito', sans-serif;
+    text-decoration: none;
+    font-weight: 600px;
+    color: greenyellow;
+}
+
+nav a{
+    font-weight: 600px;
+    padding-right: 10px;
+}
+
+nav a:hover{
+    color: rgb(238, 238, 238);
+}
+
+@media (max-width:700px){
+    header{
+        flex-direction: column;
+    }
+    nav{
+        padding: 10px 0px;
+    }
 }
